objects/Private_Lane__c.object
<CustomObject>
    <description>A private lane is an auction that is dedicated to a specified list of Dealership Groups (Organization Accounts in Salesforce).</description>
    <fields>
        <fullName>Auction_Duration__c</fullName>
        <description>The numerical value of the Auction Duration</description>
        <inlineHelpText>In Seconds</inlineHelpText>
        <label>Auction Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Custom_Start_Price_Type__c</fullName>
        <description>The type value that associates to the Value</description>
        <label>Custom Start Price Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                </value>
                <value>
                    <fullName>Percent</fullName>
                </value>
                <value>
                    <fullName>Dollars</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Custom_Start_Price_Value__c</fullName>
        <description>The Custom Start Price that relates to the Type. Determines how much will come off the start price for cars launched into this lane.</description>
        <label>Custom Start Price Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Custom_Start_Price__c</fullName>
        <description>A Concatenation of Custom Start Price Value and Type for ease of viewing</description>
        <formula>CASE(Custom_Start_Price_Type__c,
&apos;Default&apos;, &apos;Default&apos;, 
&apos;Percent&apos;, TEXT(Custom_Start_Price_Value__c) &amp; &apos;%&apos;,
&apos;Dollars&apos;,&apos;$&apos; &amp; TEXT(Custom_Start_Price_Value__c),
&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Custom Start Price</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_of_the_Week__c</fullName>
        <description>Dependent on the frequency</description>
        <label>Day(s) of the Week</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Frequency__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Monthly_or_Weekly_Days_of_the_Week</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>Date of when the Private Lane will End</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <description>Time the Private Lane will End</description>
        <label>End Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <description>The frequency of the event</description>
        <label>Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Perpetual</fullName>
                </value>
                <value>
                    <fullName>One-Time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lane_Id__c</fullName>
        <description>External Id of the Private Lane Id</description>
        <externalId>true</externalId>
        <label>Lane Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Make_Offer_Duration__c</fullName>
        <description>The duration of the Make Offer phase</description>
        <inlineHelpText>In Seconds</inlineHelpText>
        <label>Make Offer Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Make_Offer_Type__c</fullName>
        <description>Determines whether the Private Lane will show or hide the reserve for Making an Offer</description>
        <label>Make Offer Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SHOW_RESERVE</fullName>
                    <label>Show Reserve</label>
                </value>
                <value>
                    <fullName>HIDE_RESERVE</fullName>
                    <label>Hide Reserve</label>
                </value>
                <value>
                    <fullName>SEALED_BID</fullName>
                    <label>Sealed Bid</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Options__c</fullName>
        <description>Sets the Payment Options for this Private Lane</description>
        <label>Payment Options</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                    <default>true</default>
                    <label>Default</label>
                </value>
                <value>
                    <fullName>No Payment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Preview_Duration__c</fullName>
        <description>PA-71.</description>
        <label>Preview Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Preview_Proxy_Bidding__c</fullName>
        <defaultValue>false</defaultValue>
        <description>PA-72</description>
        <label>Preview Proxy Bidding</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Preview_Start_Price__c</fullName>
        <defaultValue>false</defaultValue>
        <description>PA-77</description>
        <label>Preview Start Price</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sale_Format__c</fullName>
        <description>The type of format that is used in this Private Lane. In the future, this might change to a multi-select picklist to allow multiple options but for now, only one option is available</description>
        <label>Sale Format</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bidding</fullName>
                </value>
                <value>
                    <fullName>Purchase Now</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Date the Private Lane will start</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <description>Time the Private Lane will start</description>
        <label>Start Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Current Status of the Private Lane</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Timezone__c</fullName>
        <description>Timezone for the Time selected. API name and Label are different as the API name can be used in Apex to get the general time zone (meaning other ST or DST). If new one added, add a test to PrivateLaneLayoutContTest.</description>
        <label>Timezone</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>America/New_York</fullName>
                    <label>ET</label>
                </value>
                <value>
                    <fullName>America/Chicago</fullName>
                    <label>CT</label>
                </value>
                <value>
                    <fullName>America/Denver</fullName>
                    <label>MT</label>
                </value>
                <value>
                    <fullName>America/Los_Angeles</fullName>
                    <label>PT</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Title_Option__c</fullName>
        <description>Determines whether cars in this lane will produce a Title Case</description>
        <label>Title Option</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                    <default>true</default>
                    <label>Default</label>
                </value>
                <value>
                    <fullName>No Title</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Private Lane</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Frequency__c</columns>
        <columns>Preview_Duration__c</columns>
        <columns>Auction_Duration__c</columns>
        <columns>Sale_Format__c</columns>
        <columns>Make_Offer_Duration__c</columns>
        <columns>Payment_Options__c</columns>
        <columns>Title_Option__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Closed_Lanes</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Frequency__c</columns>
        <columns>Lane_Id__c</columns>
        <columns>Auction_Duration__c</columns>
        <columns>Make_Offer_Duration__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <label>All Closed Lanes</label>
    </listViews>
    <listViews>
        <fullName>All_Open_Lanes</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Frequency__c</columns>
        <columns>Lane_Id__c</columns>
        <columns>Auction_Duration__c</columns>
        <columns>Make_Offer_Duration__c</columns>
        <columns>Start_Time__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>All Open Lanes</label>
    </listViews>
    <nameField>
        <label>Private Lane Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Private Lanes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>